GNOME Bugzilla – Bug 754524
keyboard navigation broken when adding a new input source (keyboard layout)
Last modified: 2015-09-07 14:52:33 UTC
Steps to reproduce: 1. open gnome-control-center, go to "Region & Language" 2. below "Input Sources", press the "add" button 3. (first list) choose any language by keyboard (first level) 4. (second list) try to choose a keyboard layout by using the arrow keys What happens: UI goes back to language selection, unable to choose a keyboard layout by using arrow, tab, space and enter keys. What should happen: The second list (keyboard layout) should be keyboard-navigable as is the first one. Tested with: control-center-3.16.3-1.fc22.x86_64 control-center-3.17.90-1.fc23.x86_64
Created attachment 310611 [details] [review] region: Fix the input chooser add button sensitiveness logic Going back when the back row just gets selected breaks keyboard navigation. This behavior got introduced by mistake in commit f28e06a4. Instead, let's just do the add button sensitiveness logic here. The back row still works when activated.
Review of attachment 310611 [details] [review]: Sure.
Attachment 310611 [details] pushed as 3b14056 - region: Fix the input chooser add button sensitiveness logic