region: Fix the input chooser add button sensitiveness logic

Going back when the back row just gets selected breaks keyboard
navigation. This behavior got introduced by mistake in commit
f28e06a4. Instead, let's just do the add button sensitiveness logic
here. The back row still works when activated.

https://bugzilla.gnome.org/show_bug.cgi?id=754524